syntax = "proto2";

package license;
option go_package = "license_v5";


message License {
    optional string activation_time  = 1; // 生效日期 "2019-09-11"
    optional uint32 expiration_days = 2; // 许可天数, 0表示永久授权
    optional int32 analyzer_count = 3; // 分析器数量
    optional int32 vtap_count_type1 = 4; // Trident运行于KVM宿主机上
    optional int32 vtap_count_type2 = 5; // Trident运行于ESXi/Hyper-V等专用虚拟机上
    optional int32 vtap_count_type3 =6; // Trident运行于客户的虚拟机内部
    repeated string controller_public_ip = 7; // 控制器IP
    repeated string controller_hostname = 8; // 控制器主机名
    optional string customer = 9; // 客户名称

    optional string product_name = 10; // 产品名称 DeepFlow
    optional string product_version = 11; // 版本号 V5

    optional string signatory = 12; // 签发人
    optional string issuance_time = 13; // 签发时间戳 "2019-09-11 15:43:20"
    optional string sign_server_ip = 14; // 签发服务器IP
    optional string agency = 15; // 代理商

    optional int32 vtap_count_type4 = 16 [default = 0]; // 物理机进程类型采集器
    optional int32 vtap_count_type5 = 17 [default = 0]; // 专用物理机类型采集器
    optional int32 vtap_count_type6 = 18 [default = 0]; // 虚拟机pod
    optional int32 vtap_count_type7 = 19 [default = 0]; // 物理机pod
    optional uint32 crm_id = 20; //CRM ID
    optional string contract_no = 21; //合同编号
    optional bool   controller_cluster = 22 [default = true]; //控制器集群 - 20201102废弃 暂不删除
    optional int32 controller_count = 23; //控制器数量
    optional int32 controller_count_multi_region_feature = 24; //跨区域时，多区域Feature授权的数量
    optional int32 vtap_count_type8 = 25 [default = 0]; // 隧道解封装类型采集器
    optional int32 vtap_count_type9 = 26 [default = 0]; // Hyper-V采集器
    optional int32 vtap_count_typec = 27 [default = 0]; // C类采集器
}
